--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-async": "~2.0.1",
     "react-router-component": "~0.23.3",
     "node-jsx": "~0.12.4",
-    "url": "~0.10.2"
+    "url": "~0.10.2",
+    "express-react-views": "~0.7.1"
   }
 }
