--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "postinstall": "node_modules/.bin/gulp"
   },
   "dependencies": {
     "body-parser": "~1.10.1",
@@ -18,5 +19,11 @@
     "node-jsx": "~0.12.4",
     "url": "~0.10.2",
     "express-react-views": "~0.7.1"
+  },
+  "devDependencies": {
+    "gulp": "~3.8.10",
+    "gulp-webpack": "~1.2.0",
+    "webpack": "~1.5.3",
+    "jsx-loader": "~0.12.2"
   }
 }
