--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "url": "~0.10.2",
     "express-react-views": "~0.7.1",
     "superagent": "~0.21.0",
-    "fibers": "~1.0.5"
+    "fibers": "~1.0.5",
+    "react-document-title": "~0.1.3"
   },
   "devDependencies": {
     "gulp": "~3.8.10",
