--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express-react-views": "~0.7.1",
     "superagent": "~0.21.0",
     "fibers": "~1.0.5",
-    "react-document-title": "~0.1.3"
+    "react-document-title": "~0.1.3",
+    "mongoose": "~3.8.23"
   },
   "devDependencies": {
     "gulp": "~3.8.10",
